--- a/src/Components/Navbar2/Navbar2.scss
+++ b/src/Components/Navbar2/Navbar2.scss
@@ -4,45 +4,48 @@
     align-items: center;
     padding: 18px 70px 18px;
     justify-content: space-between;
-}
+    position: relative;
 
-.logo {
-    height: 4rem;
-}
+    .logo {
+        height: 4rem;
+    }
 
-.logo-nav {
-    display: flex;
-}
+    .logo-nav {
+        display: flex;
+    }
 
-.link-style {
-    text-decoration: none;
-    color: #ffffff;
-    font-family: Arial, Helvetica, sans-serif;
-}
+    .logo-text {
+        font-size: 1.875rem;
+        font-weight: 700;
+        display: flex;
+        align-items: center;
+    }
 
-.logo-text {
-    font-size: 1.875rem;
-    font-weight: 700;
-    display: flex;
-    align-items: center;
-}
+    .nav {
+        display: flex;
+        margin-right: 30px;
+        font-weight: 600;
 
-.nav {
-    display: flex;
-    margin-right: 30px;
-    font-weight: 700;
-}
+        li {
+            display: flex;
+            text-align: center;
+            justify-content: center;
+            margin-left: 30px;
+            width: 110px;
+            padding: 7px 10px;
+        }
 
-.nav li {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    margin-left: 30px;
-    width: 110px;
-    padding: 9px;
-}
+        .login {
+            background-color: #2e3016;
+            border-radius: 50px;
+        }
 
-.login {
-    background-color: #2e3016;
-    border-radius: 50px;
+    }
+
+    .link-style {
+        text-decoration: none;
+        color: #ffffff;
+        font-family: "Oswald", sans-serif;
+        font-size: 1.2rem;
+    }
 }
