--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;500;600&display=swap');
+
+
 *, body, html {
     margin: 0;
     padding: 0;
